# ultra-cycling-ai

./: .gitignore
karoo/: README.md
server/: .env.example  ARCHITECTURE.md  pyproject.toml
server/scripts/: import_gpx.py  replay_fit.py
server/src/ultra_cycling_ai/: __init__.py  config.py  main.py
server/src/ultra_cycling_ai/agent/: context.py  cooldown.py  runner.py  system_prompt.py
server/src/ultra_cycling_ai/api/: routes.py  schemas.py
server/src/ultra_cycling_ai/db/: engine.py  models.py
server/src/ultra_cycling_ai/llm/: openai_client.py
server/src/ultra_cycling_ai/memory/: intake_ledger.py  ride_state.py
server/src/ultra_cycling_ai/tools/: daylight.py  poi_search.py  registry.py  route_analysis.py  weather.py
server/tests/: conftest.py  test_agent.py  test_api.py  test_route_analysis.py  test_weather.py
